# freqtrade-report-kit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github-actions.md
examples/: backtest-result.sample.json
examples/github-actions/: freqtrade-report.yml
reports/: sample-report.md
src/freqtrade_report_kit/: __init__.py  cli.py  gates.py  models.py  parser.py  renderers.py
tests/: test_parser_and_renderers.py
