[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freqtrade-report-kit"
version = "0.2.0"
description = "Generate clean Markdown, HTML, and CSV risk reports from Freqtrade backtest JSON exports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Minghao Liu", email = "minghao13187@gmail.com" }
]
keywords = [
  "freqtrade",
  "trading",
  "backtest",
  "risk-management",
  "quant",
  "markdown",
  "obsidian"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/StaryMoon/freqtrade-report-kit"
Repository = "https://github.com/StaryMoon/freqtrade-report-kit"
Issues = "https://github.com/StaryMoon/freqtrade-report-kit/issues"

[project.scripts]
freqtrade-report-kit = "freqtrade_report_kit.cli:main"
ft-report-kit = "freqtrade_report_kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/freqtrade_report_kit"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP006", "UP007"]
